# GTestParametrisedTests

./: CMakeLists.txt
inc/: sorts.hpp
src/: main.cpp  sorts.cpp
tests/: test_sorts.cpp
